# emessgee

./: .gitignore  CMakeLists.txt  README.md  SConscript  SConstruct  build.sh  main.cpp  pyproject.toml  run_test.sh  setup.py
emessgee/: __init__.py  buffer_write_code.h  buffer_write_code.pxd  buffer_write_code_pyx.pyx  constants.h  constants.pxd  constants.py  constants_pyx.pyx  emessgee.h  error_messages.h  error_messages.pxd  error_messages_pyx.pyx  exceptions.py  header.py  memory_block.py  memory_queue.py  message_header.h  message_header.pxd  message_header_pyx.pyx  metadata.h  metadata.pxd  metadata_pyx.pyx  params.cpp  params.h  params.pxd  params_pyx.pyx  publisher.cpp  publisher.h  publisher.pxd  publisher.py  publisher_pyx.pyx  read_memory_block.cpp  read_memory_block.h  read_memory_block.pxd  read_memory_block_pyx.pyx  read_memory_queue.cpp  read_memory_queue.h  read_memory_queue.pxd  read_memory_queue_pyx.pyx  read_result.h  (+21 more)
examples/: image_transfer.py  multiple_topics_1.py  multiple_topics_2.py  params_get_set.py  pub_sub.py  publish_image.py  publish_video.py  queue_size.py
examples/multiple_topics_1/: CMakeLists.txt  main.cpp
examples/multiple_topics_2/: CMakeLists.txt  main.cpp
examples/params/: CMakeLists.txt  main.cpp
examples/pub_sub/: CMakeLists.txt  main.cpp
examples/pub_sub_threads/: CMakeLists.txt  main.cpp
examples/publish_image/: CMakeLists.txt  main.cpp
examples/publish_video/: CMakeLists.txt  main.cpp
include/: buffer_write_code.h  constants.h  emessgee.h  memory_block.h  message_header.h  metadata.h  publisher.h  read_memory_block.h  read_memory_queue.h  rng.h  subscriber.h  typedefs.h  utils.h  write_memory_block.h  write_memory_queue.h
src/: publisher.cpp  read_memory_block.cpp  read_memory_queue.cpp  rng.cpp  subscriber.cpp  subsriber.cpp  write_memory_block.cpp  write_memory_queue.cpp
test/: CMakeLists.txt  base_test.py  main.cpp  test_memory_queue.py  test_params.py  test_pub_sub.py  test_publisher.py  test_read_memory_block.py  test_read_memory_queue.py  test_subscriber.py  test_write_memory_block.py  test_write_memory_queue.py
test/include/: test_data.h
test/src/: params_test.cpp  publisher_test.cpp  read_memory_block_test.cpp  read_memory_queu_test.cpp  read_memory_queue_test.cpp  subscriber_test.cpp  test_utils.cpp  write_memory_block_test.cpp  write_memory_queue_test.cpp
tests/: conftest.py  test_integration.py  test_memory_block.py  test_memory_queue.py  test_publisher.py  test_read_memory_block.py  test_read_memory_queue.py  test_subscriber.py  test_write_memory_block.py  test_write_memory_queue.py
